add GetLastUniqueAuthor endpoint
